--- a/src/frontend/destination_search/templates/home.html
+++ b/src/frontend/destination_search/templates/home.html
@@ -10,7 +10,11 @@ fynd
 <div class="home-overview-container">
     <div class="home-intro-text">
         <div class="home-welcome">Welcome to <img src="{% static 'images/logo.svg' %}" style="height: 1em;" alt="fynd"></div>
-        Choose an option below to get started.
+        Choose an option below to get started<br>and
+        <span class="colored-letter">f</span><span class="f-space"></span>ind 
+        <span class="colored-letter">y</span>our 
+        <span class="colored-letter">n</span>ext 
+        <span class="colored-letter">d</span>estination.
     </div>
 
     <div class="box-container">
