--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -864,9 +864,19 @@ body {
     transform: translateX(-50%); /* Move the knob left by 50% of its own width */
 }
 
+.dimension-score-no-knob {
+    width: 100%;
+    height: 100%;
+}
+
 .score-tooltip-text {
     top: -50%;
     left: 150%;
+}
+
+.missing-score-tooltip-text {
+    top: -50%;
+    left: 50%;
 }
 
 .map-container {
