--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -58,9 +58,15 @@
                             <div class="dimension-score-container">
                                 <div class="dimension-score-slider">
                                     <div class="dimension-score-slider-range">
-                                        <div class="dimension-score-knob has-tooltip" style="left: calc({{ dimension.score }} * 100%)">
-                                            <span class="tooltip-text score-tooltip-text">{{ dimension.score|floatformat:2 }}</span>
-                                        </div>
+                                        {% if dimension.score %}
+                                            <div class="dimension-score-knob has-tooltip" style="left: calc({{ dimension.score }} * 100%)">
+                                                <span class="tooltip-text score-tooltip-text">{{ dimension.score|floatformat:2 }}</span>
+                                            </div>
+                                        {% else %}
+                                            <div class="dimension-score-no-knob has-tooltip">
+                                                <span class="tooltip-text missing-score-tooltip-text">Missing</span>
+                                            </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
