Facet grid for location list

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -16,7 +16,7 @@
     --lightgrey: #f9f9f9;
     --light: #f8f9fa;
 
-    --content-width: calc(min(1200px, 100% - 20px));
+    --content-width: calc(min(85%, 100% - 20px));
 }
 
 /* Base ---------------------------------------------------------------------*/
@@ -318,8 +318,18 @@ body {
 
 /* Location list ------------------------------------------------------------*/
 
+.list .main-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 .list .form-container {
     width: 35%;
+    min-width: 300px;
+    max-width: 400px;
     background-color: var(--accent2);
     border-radius: 0 0 10px 10px;
     padding: 10px;
@@ -375,6 +385,7 @@ body {
 }
 
 .results-container {
+    flex-grow: 1;
     width: 55%;
     height: 100%;
     background-color: yellow;
@@ -401,29 +412,33 @@ body {
 .location-list-container {
     width: 100%;
     background-color: blue;
+    margin: 20px 0px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(max(12vw, 200px), 1fr));
+    gap: 40px;
 }
 
 .location-list-item-container {
-    border: 1px solid lightgrey;
-    border-radius: 10px;
-    width: 100%;
-    padding: 10px;
-    margin: 20px 0px;
-    position: relative;
+    flex-grow: 1;
+    flex-basis: 0;
+    flex-shrink: 0;
+    border: 1px solid red;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    flex-direction: column;
 }
 
 .location-list-item-image-container {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
     border-radius: 10px;
-    margin-right: 10px;
     overflow: hidden;
 }
 
 .location-list-item-image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
     object-fit: cover;
     min-width: 100%;
     min-height: 100%;
@@ -434,33 +449,46 @@ body {
 .location-list-item-info-container {
     flex: 1;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    background-color: yellowgreen;
+}
+
+.location-list-item-info-general {
+    display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    flex-wrap: nowrap;
     background-color: pink;
+    
 }
 
 .location-list-item-title {
     font-size: 1.2em;
+    color: var(--darkgrey);
 }
 
 .location-list-item-city-name {
     font-weight: bold;
 }
 
-.location-list-item-distance-to-start {
-    color: var(--darkgrey);
+.location-list-item-country {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
 }
 
 .location-list-item-country-name {
     font-size: 0.8em;
 }
 
+.location-list-item-distance-to-start {
+    color: var(--normalgrey);
+    font-size: 0.8em;
+    margin-top: 5px;
+}
+
 .location-list-item-relevance-container {
-    flex: 0 0 100px;
-    height: 100px;
-    margin-left: 10px;
-    align-self: flex-end;
     background-color: var(--accent3);
     display: flex;
     justify-content: center;
@@ -468,8 +496,8 @@ body {
 }
 
 .location-list-item-relevance {
-    right: 20px;
-    font-size: 2em;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 /* Home page ----------------------------------------------------------------*/
