--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -112,7 +112,7 @@ body {
     flex-wrap: nowrap;
     background-color: white;
     /*border: 1px solid green;*/
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 /* Reoccurring elements -----------------------------------------------------*/
@@ -165,7 +165,7 @@ body {
 }
 
 .submit-button:active {
-    background-color: var(--accent9);
+    filter: brightness(85%);
     box-shadow: none;
 }
 
@@ -384,14 +384,42 @@ body {
     flex-grow: 1;
 }
 
+/*---*/
+
 .results-container {
     flex-grow: 1;
     width: 55%;
     height: 100%;
-    background-color: yellow;
+    padding: 20px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.destination-type-title {
+    width: 100%;
+    font-size: 2em;
+    color: var(--normalgrey);
+    border-bottom: var(--accent3) 1px solid;
+}
+
+.previous-location-list-container {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(calc(max(10vw, 200px) + 10px + max(min(10vh, 100px), 80px)), 1fr));
+    gap: 20px;
+}
+
+.previous-location-list-item-container {
+    /*width: fit-content;*/
+    height: 5vw;
+    min-height: 80px;
+    max-height: 100px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .sort-container {
@@ -401,64 +429,64 @@ body {
     align-items: center;
     align-self: flex-end;
     width: 100%;
-    background-color: green;
     margin-top: 20px;
 }
 
 .sort-label {
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .location-list-container {
     width: 100%;
-    background-color: blue;
     margin: 20px 0px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(max(12vw, 200px), 1fr));
-    gap: 40px;
+    gap: 50px;
 }
 
 .location-list-item-container {
     flex-grow: 1;
     flex-basis: 0;
     flex-shrink: 0;
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 
 .location-list-item-image-container {
-    width: 100%;
-    padding-top: 100%;
-    position: relative;
     border-radius: 10px;
     overflow: hidden;
 }
 
+.same-height-as-width {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.same-width-as-height {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+}
+
 .location-list-item-image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
     object-fit: cover;
     min-width: 100%;
     min-height: 100%;
     width: 100%;
     height: 100%;
+    /*box-shadow: inset 0 0 10px #000000;*/
   }
 
 .location-list-item-info-container {
-    flex: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: start;
-    background-color: yellowgreen;
 }
 
 .location-list-item-info-general {
     display: flex;
     flex-direction: column;
-    background-color: pink;
     
 }
 
@@ -489,7 +517,6 @@ body {
 }
 
 .location-list-item-relevance-container {
-    background-color: var(--accent3);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -498,6 +525,25 @@ body {
 .location-list-item-relevance {
     font-size: 1.2em;
     font-weight: bold;
+    color: var(--darkgrey);
+}
+
+.pagination-container {
+    margin-top: 50px;
+}
+
+.page-link {
+    color: var(--accent1);
+}
+
+.page-link:hover {
+    color: var(--accent1);
+    filter: brightness(85%);
+}
+
+.page-item.active .page-link {
+    background-color: var(--accent1);
+    border-color: var(--accent1);
 }
 
 /* Home page ----------------------------------------------------------------*/
