--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -146,11 +146,36 @@ Results
 <!--- Results -->
 <div class="results-container">
 
+    <div class="destination-type-title">Your previous destinations</div>
+    <div class="previous-location-list-container">
+        {% for location in previous_locations_list %}
+            <div class="previous-location-list-item-container">
+                <div class="location-list-item-image-container same-width-as-height">
+                    <img src="{{ location.thumbnail_url }}" alt="{{ location.city }} image">
+                </div>
+                <div class="location-list-item-info-general">
+                    <div class="location-list-item-title">
+                        <a href="{% url 'location_detail' location_id=location.location_id %}?{{ query_parameters }}">
+                            <span class="location-list-item-city-name">{{ location.city }}</span>
+                        </a>
+                    </div>
+                    <div class="location-list-item-country">
+                        <img src="https://flagsapi.com/{{ location.country_code }}/flat/24.png" alt="{{ location.country }} flag">
+                        <div class="location-list-item-country-name">{{ location.country }}</div>
+                    </div>
+                    <span class="location-list-item-distance-to-start">{{ location.distance_to_start|floatformat:"0"|intcomma }} km away</span>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div class="destination-type-title">New destinations</div>
+
     <!--- Sort-by dropdown -->
     <div class="sort-container">
         <div class="sort-label">Sort by:</div>
         <form action="" method="get" id="sortForm" style="display: flex; align-items: center;">
-            <select class="form-control ml-2" id="sort" name="sort" onchange="setParam('sort', this.value);">
+            <select class="form-control" id="sort" name="sort" onchange="setParam('sort', this.value);">
                 <option value="relevance_desc" {% if current_sort_order == 'relevance_desc' %}selected{% endif %}>Relevance (descending)</option>
                 <option value="distance_asc" {% if current_sort_order == 'distance_asc' %}selected{% endif %}>Distance to start (ascending)</option>
                 <option value="distance_desc" {% if current_sort_order == 'distance_desc' %}selected{% endif %}>Distance to start (descending)</option>
@@ -166,7 +191,7 @@ Results
 
             <div class="location-list-item-container">
 
-                <div class="location-list-item-image-container">
+                <div class="location-list-item-image-container same-height-as-width">
                     <a href="{% url 'location_detail' location_id=location.location_id %}?{{ query_parameters }}">
                         <img src=" {{location.thumbnail_url }} " alt="{{ location.city }} image">
                     </a>
