Make clear right now only cities in database

--- a/src/frontend/destination_search/templates/home.html
+++ b/src/frontend/destination_search/templates/home.html
@@ -14,7 +14,7 @@ fynd
         <span class="colored-letter">f</span><span class="f-space"></span>ind 
         <span class="colored-letter">y</span>our 
         <span class="colored-letter">n</span>ext 
-        <span class="colored-letter">d</span>estination.
+        <span class="colored-letter">d</span>estination for a city trip.
     </div>
 
     <div class="box-container">
