Padding for tabcontent (details page)

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -798,7 +798,7 @@ body {
     display: none;
     width: 100%;
     background-color: var(--accent2);
-    padding-top: 20px;
+    padding: 20px;
     color: var(--darkgrey);
 }
 
