--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -39,7 +39,7 @@ body {
     content: "";
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/b/bc/BlankMap-World-Compact.svg');
     background-repeat: repeat;
-    background-size: auto;
+    background-size: 190%;
     background-position: center;
     background-attachment: fixed;
     opacity: 0.3;
